--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container_caixa">
             <h1 class="container_titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
             <img class="container_imagem" src="./img/Combo.png" alt="O combo mais é a junção do alura+ e o alura língua">
-            <a class="container_botao" href="https://www.alura.com.br/" >Assine por 12x de R$ 120,00*</a>
-            <a class="container_botao botao_secundario" href="https://www.alura.com.br/" >Assinar somente o Alura+</a>
+            <a class="container_botao" href="https://cursos.alura.com.br/compra/pro/semanadaprogramacao" >Assine por 12x de R$ 122,18*</a>
+            <a class="container_botao botao_secundario" href="https://cursos.alura.com.br/compra/plus/semanadaprogramacao" >Assinar somente o Alura+</a>
             <p class="container_aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
@@ -31,13 +31,13 @@
     <section class="container secundario">
         <div class="container_descricao">
             <p class="descricao_texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-            <a class="container_botao secundario_botao" href="https://www.alura.com.br/">Assine o Combo+</a>
+            <a class="container_botao secundario_botao" href="https://cursos.alura.com.br/compra/pro/semanadaprogramacao">Assine o Combo+</a>
         </div>
-        <img src="./img/Telas.png" alt="Imagem da tela do computador exibindo a página do Alura+ e Alura Língua">
+        <img class="secundario_imagem" src="./img/Telas.png" alt="Imagem da tela do computador exibindo a página do Alura+ e Alura Língua">
     </section>
 
     <section class="container secundario">
-        <img class="notebook_imagem" src="./img/Notebook.png" alt="Imagem de um notebook com a página do Alura+ aberta">
+        <img class="secundario_imagem" class="notebook_imagem" src="./img/Notebook.png" alt="Imagem de um notebook com a página do Alura+ aberta">
         <div class="container_descricao">
             <h2 class="descricao_titulo">Baixe seus cursos</h2>
             <p class="descricao_texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
