--- a/index.html
+++ b/index.html
@@ -43,5 +43,56 @@
             <p class="descricao_texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
         </div>
     </section>
+
+    <section class="dispositivos" >
+        <h2 class="dispositivos_titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos_lista">
+            <li>
+                <img src="./img/tv.png" alt="Icone de uma televisao">
+                <h3 class="lista_item">TV</h3>
+            </li>
+            <li>
+                <img src="./img/computador.png" alt="Icone de um computador">
+                <h3 class="lista_item">Computadores</h3>
+            </li>
+            <li>
+                <img src="./img/celular.png" alt="Icone de um celular">
+                <h3 class="lista_item">Celulares e Tablets</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="rodape">
+        <img class="rodape_logo" src="./img/Logo.png" alt="Logo da Alura+">
+        <ul class="rodape_lista">
+            <li class="lista_link">
+                <a class="links" href="#">Idioma</a>
+            </li>
+            <li class="lista_link">
+                <a class="links" href="#">Dispositivos compatíveis</a>
+            </li>
+            <li class="lista_link">
+                <a class="links" href="#">Contrato de assinatura</a>
+            </li>
+            <li class="lista_link">
+                <a class="links" href="#">Politica de privacidade</a>
+            </li>
+            <li class="lista_link">
+                <a class="links" href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li class="lista_link">
+                <a class="links" href="#">Anuncios personalizados</a>
+            </li>
+            <li class="lista_link">
+                <a class="links" href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape_texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape_texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
+
+
+
+
